Enhanced RootLayout with custom header options, updated TotpList to display a message when no configurations are present, and added localization support for empty state messages in English and Chinese.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -13,6 +13,10 @@
     "add": "Add Config",
     "running": "Running",
     "stop": "Stop",
-    "otp": "OTP"
+    "otp": "OTP",
+    "empty": {
+      "title": "No TOTP configurations yet",
+      "subtitle": "Tap the + button to add one"
+    }
   }
 }
