--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -1,23 +1,27 @@
 {
   "totpConfig": {
     "title": "TOTP配置",
-    "preset": "其他",
+    "preset": "预设配置",
     "name": {
+      "label": "配置名称",
       "required": "配置名称必填",
       "maxLength": "最多60个字符",
       "placeholder": "例如：Github 张三"
     },
     "secret": {
+      "label": "密钥",
       "required": "密钥必填",
       "placeholder": "请输入密钥"
     },
     "algorithm": "算法",
     "digits": {
+      "label": "位数",
       "required": "位数必填",
       "min": "最小6位",
       "max": "最大12位"
     },
     "period": {
+      "label": "时间窗口（秒）",
       "required": "时间窗口必填",
       "min": "最小1秒"
     },
