Enhanced SettingsScreen with language and theme logging, updated localization for settings options, and improved TotpConfigSheet layout with a new header and footer structure for better user interaction.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -36,5 +36,18 @@
       "title": "No TOTP configurations yet",
       "subtitle": "Tap the + button to add one"
     }
+  },
+  "settings": {
+    "theme": {
+      "title": "Theme",
+      "system": "System",
+      "light": "Light",
+      "dark": "Dark"
+    },
+    "language": {
+      "title": "Language",
+      "en": "English",
+      "zh": "中文"
+    }
   }
 }
