Update TotpConfig component styles to adjust width and modify placeholder text in English and Chinese translations for improved clarity and user experience.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -5,7 +5,7 @@
       "label": "Name",
       "required": "Name is required",
       "maxLength": "Maximum 60 characters",
-      "placeholder": "e.g., Github John"
+      "placeholder": "e.g., John"
     },
     "serviceProvider": {
       "label": "Service Provider",
