Implement language selection feature in settings, allowing users to choose 'system' language option. Update LanguageContext to handle system language detection and adjust translations in English and Chinese. Enhance language options in settings screen for improved user experience.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -61,6 +61,7 @@
     },
     "language": {
       "title": "Language",
+      "system": "Follow System",
       "en": "English",
       "zh": "中文"
     }
