Add delete functionality to TotpConfig component, allowing users to remove configurations with confirmation. Update translations for delete prompts in English and Chinese, and adjust styles for improved user experience.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -30,7 +30,8 @@
       "min": "Minimum 1 second"
     },
     "confirm": "Confirm",
-    "more": "More"
+    "more": "More",
+    "delete": "Delete"
   },
   "totpList": {
     "add": "Add Config",
